Module13.6: Woman Jacket section added

--- a/milestone-module/milestone03/module13.6-bootstrap-practice/index.html
+++ b/milestone-module/milestone03/module13.6-bootstrap-practice/index.html
@@ -53,8 +53,10 @@
         <section class="container">
             <div class="row gx-5 top-section">
                 <div class="col top-left mt-5">
-                    <h1 class="text-uppercase display-4 fw-bold"><span class="text-warning ">Be the Penguins</span> of Winter</h1>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tenetur minus commodi voluptates quo dicta quos?</p>
+                    <h1 class="text-uppercase display-4 fw-bold"><span class="text-warning ">Be the Penguins</span> of
+                        Winter</h1>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tenetur minus commodi voluptates quo
+                        dicta quos?</p>
                     <div class="bg-success rounded w-25 p-2" style="--bs-bg-opacity: .8;">
                         <img class="w-25" src="./icons/shopping-cart 1.png" alt="shopping-cart">
                         <span class="text-light text-uppercase">Buy Now</span>
@@ -70,6 +72,95 @@
 
     <!-- Main Body Section Start -->
     <main>
+
+        <section class="container">
+            <!-- Woman Jacket Section -->
+            <div class="woman-jacket fw-bold fs-1 text-uppercase mt-5">
+                <p>Woman Jacket</p>
+            </div>
+            <div class="row">
+                <div class="col">
+                    <div class="wonman-card">
+                        <div class="card">
+                            <div class="w-100 p-2 rounded">
+                                <img class="w-100 bg-light rounded" src="./images/jacket-1.png" alt="jacket-1">
+                            </div>
+                            <h1 class="fs-3 ps-2">Yellow Coat Jacket</h1>
+                            <p class="ps-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe laboriosam a laudantium accusamus
+                                nobis repellendus.
+                            </p>
+                            <div class="container">
+                                <div class="row gx-4">
+                                    <div class="col ps-0">
+                                        <p class="text-warning fs-2 fw-bold mb-0 ">$235</p>
+                                    </div>
+                                    <div class="col bg-success rounded p-2" style="--bs-bg-opacity: .8;">
+                                        <img class="w-25" src="./icons/shopping-cart 1.png" alt="shopping-cart">
+                                        <span class="text-light text-uppercase p-2">Buy Now</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="wonman-card">
+                        <div class="card">
+                            <div class="w-100 p-2 rounded">
+                                <img class="w-100 bg-light rounded" src="./images/jacket-1.png" alt="jacket-1">
+                            </div>
+                            <h1 class="fs-3 ps-2">Yellow Coat Jacket</h1>
+                            <p class="ps-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe laboriosam a laudantium accusamus
+                                nobis repellendus.
+                            </p>
+                            <div class="container">
+                                <div class="row gx-4">
+                                    <div class="col ps-0">
+                                        <p class="text-warning fs-2 fw-bold mb-0 ">$235</p>
+                                    </div>
+                                    <div class="col bg-success rounded p-2" style="--bs-bg-opacity: .8;">
+                                        <img class="w-25" src="./icons/shopping-cart 1.png" alt="shopping-cart">
+                                        <span class="text-light text-uppercase p-2">Buy Now</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="wonman-card">
+                        <div class="card">
+                            <div class="w-100 p-2 rounded">
+                                <img class="w-100 bg-light rounded" src="./images/jacket-1.png" alt="jacket-1">
+                            </div>
+                            <h1 class="fs-3 ps-2">Yellow Coat Jacket</h1>
+                            <p class="ps-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe laboriosam a laudantium accusamus
+                                nobis repellendus.
+                            </p>
+                            <div class="container">
+                                <div class="row gx-4">
+                                    <div class="col ps-0">
+                                        <p class="text-warning fs-2 fw-bold mb-0 ">$235</p>
+                                    </div>
+                                    <div class="col bg-success rounded p-2" style="--bs-bg-opacity: .8;">
+                                        <img class="w-25" src="./icons/shopping-cart 1.png" alt="shopping-cart">
+                                        <span class="text-light text-uppercase p-2">Buy Now</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Men Jacket Section -->
+
+
+        </section>
+
+
+
+
 
     </main>
 
