Module13.6: Man Jacket Section Added

--- a/milestone-module/milestone03/module13.6-bootstrap-practice/index.html
+++ b/milestone-module/milestone03/module13.6-bootstrap-practice/index.html
@@ -75,76 +75,78 @@
 
         <section class="container">
             <!-- Woman Jacket Section -->
-            <div class="woman-jacket fw-bold fs-1 text-uppercase mt-5">
-                <p>Woman Jacket</p>
-            </div>
-            <div class="row">
-                <div class="col">
-                    <div class="wonman-card">
-                        <div class="card">
-                            <div class="w-100 p-2 rounded">
-                                <img class="w-100 bg-light rounded" src="./images/jacket-1.png" alt="jacket-1">
-                            </div>
-                            <h1 class="fs-3 ps-2">Yellow Coat Jacket</h1>
-                            <p class="ps-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe laboriosam a laudantium accusamus
-                                nobis repellendus.
-                            </p>
-                            <div class="container">
-                                <div class="row gx-4">
-                                    <div class="col ps-0">
-                                        <p class="text-warning fs-2 fw-bold mb-0 ">$235</p>
-                                    </div>
-                                    <div class="col bg-success rounded p-2" style="--bs-bg-opacity: .8;">
-                                        <img class="w-25" src="./icons/shopping-cart 1.png" alt="shopping-cart">
-                                        <span class="text-light text-uppercase p-2">Buy Now</span>
+            <div class="woman-section">
+                <div class="fw-bold fs-1 text-uppercase mt-5">
+                    <p>Woman Jacket</p>
+                </div>
+                <div class="row">
+                    <div class="col">
+                        <div class="wonman-card">
+                            <div class="card">
+                                <div class="w-100 p-2 rounded">
+                                    <img class="w-100 bg-light rounded" src="./images/jacket-1.png" alt="jacket-1">
+                                </div>
+                                <h1 class="fs-3 ps-2">Yellow Coat Jackets</h1>
+                                <p class="ps-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe laboriosam a laudantium accusamus
+                                    nobis repellendus.
+                                </p>
+                                <div class="container mb-2">
+                                    <div class="row gx-4">
+                                        <div class="col ps-0">
+                                            <p class="text-warning fs-2 fw-bold mb-0 ">$235</p>
+                                        </div>
+                                        <div class="col bg-success rounded p-2" style="--bs-bg-opacity: .8;">
+                                            <img class="w-25" src="./icons/shopping-cart 1.png" alt="shopping-cart">
+                                            <span class="text-light text-uppercase p-2">Buy Now</span>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="col">
-                    <div class="wonman-card">
-                        <div class="card">
-                            <div class="w-100 p-2 rounded">
-                                <img class="w-100 bg-light rounded" src="./images/jacket-1.png" alt="jacket-1">
-                            </div>
-                            <h1 class="fs-3 ps-2">Yellow Coat Jacket</h1>
-                            <p class="ps-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe laboriosam a laudantium accusamus
-                                nobis repellendus.
-                            </p>
-                            <div class="container">
-                                <div class="row gx-4">
-                                    <div class="col ps-0">
-                                        <p class="text-warning fs-2 fw-bold mb-0 ">$235</p>
-                                    </div>
-                                    <div class="col bg-success rounded p-2" style="--bs-bg-opacity: .8;">
-                                        <img class="w-25" src="./icons/shopping-cart 1.png" alt="shopping-cart">
-                                        <span class="text-light text-uppercase p-2">Buy Now</span>
+                    <div class="col">
+                        <div class="wonman-card">
+                            <div class="card">
+                                <div class="w-100 p-2 rounded">
+                                    <img class="w-100 bg-light rounded" src="./images/jacket-2.png" alt="jacket-1">
+                                </div>
+                                <h1 class="fs-3 ps-2">Ladies Jackets</h1>
+                                <p class="ps-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe laboriosam a laudantium accusamus
+                                    nobis repellendus.
+                                </p>
+                                <div class="container mb-2">
+                                    <div class="row gx-4">
+                                        <div class="col ps-0">
+                                            <p class="text-warning fs-2 fw-bold mb-0 ">$235</p>
+                                        </div>
+                                        <div class="col bg-success rounded p-2" style="--bs-bg-opacity: .8;">
+                                            <img class="w-25" src="./icons/shopping-cart 1.png" alt="shopping-cart">
+                                            <span class="text-light text-uppercase p-2">Buy Now</span>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="col">
-                    <div class="wonman-card">
-                        <div class="card">
-                            <div class="w-100 p-2 rounded">
-                                <img class="w-100 bg-light rounded" src="./images/jacket-1.png" alt="jacket-1">
-                            </div>
-                            <h1 class="fs-3 ps-2">Yellow Coat Jacket</h1>
-                            <p class="ps-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe laboriosam a laudantium accusamus
-                                nobis repellendus.
-                            </p>
-                            <div class="container">
-                                <div class="row gx-4">
-                                    <div class="col ps-0">
-                                        <p class="text-warning fs-2 fw-bold mb-0 ">$235</p>
-                                    </div>
-                                    <div class="col bg-success rounded p-2" style="--bs-bg-opacity: .8;">
-                                        <img class="w-25" src="./icons/shopping-cart 1.png" alt="shopping-cart">
-                                        <span class="text-light text-uppercase p-2">Buy Now</span>
+                    <div class="col">
+                        <div class="wonman-card">
+                            <div class="card">
+                                <div class="w-100 p-2 rounded">
+                                    <img class="w-100 bg-light rounded" src="./images/jacket-3.png" alt="jacket-1">
+                                </div>
+                                <h1 class="fs-3 ps-2">Woman Leather Jackets</h1>
+                                <p class="ps-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe laboriosam a laudantium accusamus
+                                    nobis repellendus.
+                                </p>
+                                <div class="container mb-2">
+                                    <div class="row gx-4">
+                                        <div class="col ps-0">
+                                            <p class="text-warning fs-2 fw-bold mb-0 ">$235</p>
+                                        </div>
+                                        <div class="col bg-success rounded p-2" style="--bs-bg-opacity: .8;">
+                                            <img class="w-25" src="./icons/shopping-cart 1.png" alt="shopping-cart">
+                                            <span class="text-light text-uppercase p-2">Buy Now</span>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
@@ -154,7 +156,85 @@
             </div>
 
             <!-- Men Jacket Section -->
-
+            <div class="man-section">
+                <div class="fw-bold fs-1 text-uppercase mt-5">
+                    <p>Man Jacket</p>
+                </div>
+                <div class="row">
+                    <div class="col">
+                        <div class="wonman-card">
+                            <div class="card">
+                                <div class="w-100 p-2 rounded">
+                                    <img class="w-100 bg-light rounded" src="./images/jacket-4.png" alt="jacket-1">
+                                </div>
+                                <h1 class="fs-3 ps-2">Snowboard Jacket Mens</h1>
+                                <p class="ps-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe laboriosam a laudantium accusamus
+                                    nobis repellendus.
+                                </p>
+                                <div class="container mb-2">
+                                    <div class="row gx-4">
+                                        <div class="col ps-0">
+                                            <p class="text-warning fs-2 fw-bold mb-0 ">$235</p>
+                                        </div>
+                                        <div class="col bg-success rounded p-2" style="--bs-bg-opacity: .8;">
+                                            <img class="w-25" src="./icons/shopping-cart 1.png" alt="shopping-cart">
+                                            <span class="text-light text-uppercase p-2">Buy Now</span>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="wonman-card">
+                            <div class="card">
+                                <div class="w-100 p-2 rounded">
+                                    <img class="w-100 bg-light rounded" src="./images/jacket-5.png" alt="jacket-1">
+                                </div>
+                                <h1 class="fs-3 ps-2">Man Leather Jackets</h1>
+                                <p class="ps-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe laboriosam a laudantium accusamus
+                                    nobis repellendus.
+                                </p>
+                                <div class="container mb-2">
+                                    <div class="row gx-4">
+                                        <div class="col ps-0">
+                                            <p class="text-warning fs-2 fw-bold mb-0 ">$235</p>
+                                        </div>
+                                        <div class="col bg-success rounded p-2" style="--bs-bg-opacity: .8;">
+                                            <img class="w-25" src="./icons/shopping-cart 1.png" alt="shopping-cart">
+                                            <span class="text-light text-uppercase p-2">Buy Now</span>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="wonman-card">
+                            <div class="card">
+                                <div class="w-100 p-2 rounded">
+                                    <img class="w-100 bg-light rounded" src="./images/jacket-6.png" alt="jacket-1">
+                                </div>
+                                <h1 class="fs-3 ps-2">Man Casual Jackets</h1>
+                                <p class="ps-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe laboriosam a laudantium accusamus
+                                    nobis repellendus.
+                                </p>
+                                <div class="container mb-2">
+                                    <div class="row gx-4">
+                                        <div class="col ps-0">
+                                            <p class="text-warning fs-2 fw-bold mb-0 ">$235</p>
+                                        </div>
+                                        <div class="col bg-success rounded p-2" style="--bs-bg-opacity: .8;">
+                                            <img class="w-25" src="./icons/shopping-cart 1.png" alt="shopping-cart">
+                                            <span class="text-light text-uppercase p-2">Buy Now</span>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
         </section>
 
