Module13.6: Footer Section Added

--- a/milestone-module/milestone03/module13.6-bootstrap-practice/index.html
+++ b/milestone-module/milestone03/module13.6-bootstrap-practice/index.html
@@ -67,12 +67,10 @@
                 </div>
             </div>
         </section>
-
     </header>
 
     <!-- Main Body Section Start -->
     <main>
-
         <section class="container">
             <!-- Woman Jacket Section -->
             <div class="woman-section">
@@ -80,14 +78,15 @@
                     <p>Woman Jacket</p>
                 </div>
                 <div class="row">
-                    <div class="col">
+                    <div class="col shadow-lg rounded">
                         <div class="wonman-card">
-                            <div class="card">
-                                <div class="w-100 p-2 rounded">
+                            <div class="card border-0">
+                                <div class="w-100 p-2">
                                     <img class="w-100 bg-light rounded" src="./images/jacket-1.png" alt="jacket-1">
                                 </div>
                                 <h1 class="fs-3 ps-2">Yellow Coat Jackets</h1>
-                                <p class="ps-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe laboriosam a laudantium accusamus
+                                <p class="ps-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe
+                                    laboriosam a laudantium accusamus
                                     nobis repellendus.
                                 </p>
                                 <div class="container mb-2">
@@ -104,14 +103,15 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col">
+                    <div class="col shadow-lg rounded">
                         <div class="wonman-card">
-                            <div class="card">
-                                <div class="w-100 p-2 rounded">
+                            <div class="card border-0">
+                                <div class="w-100 p-2">
                                     <img class="w-100 bg-light rounded" src="./images/jacket-2.png" alt="jacket-1">
                                 </div>
                                 <h1 class="fs-3 ps-2">Ladies Jackets</h1>
-                                <p class="ps-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe laboriosam a laudantium accusamus
+                                <p class="ps-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe
+                                    laboriosam a laudantium accusamus
                                     nobis repellendus.
                                 </p>
                                 <div class="container mb-2">
@@ -128,14 +128,15 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col">
+                    <div class="col shadow-lg rounded">
                         <div class="wonman-card">
-                            <div class="card">
-                                <div class="w-100 p-2 rounded">
+                            <div class="card border-0">
+                                <div class="w-100 p-2">
                                     <img class="w-100 bg-light rounded" src="./images/jacket-3.png" alt="jacket-1">
                                 </div>
                                 <h1 class="fs-3 ps-2">Woman Leather Jackets</h1>
-                                <p class="ps-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe laboriosam a laudantium accusamus
+                                <p class="ps-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe
+                                    laboriosam a laudantium accusamus
                                     nobis repellendus.
                                 </p>
                                 <div class="container mb-2">
@@ -161,14 +162,15 @@
                     <p>Man Jacket</p>
                 </div>
                 <div class="row">
-                    <div class="col">
+                    <div class="col shadow-lg rounded">
                         <div class="wonman-card">
-                            <div class="card">
-                                <div class="w-100 p-2 rounded">
+                            <div class="card border-0">
+                                <div class="w-100 p-2">
                                     <img class="w-100 bg-light rounded" src="./images/jacket-4.png" alt="jacket-1">
                                 </div>
                                 <h1 class="fs-3 ps-2">Snowboard Jacket Mens</h1>
-                                <p class="ps-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe laboriosam a laudantium accusamus
+                                <p class="ps-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe
+                                    laboriosam a laudantium accusamus
                                     nobis repellendus.
                                 </p>
                                 <div class="container mb-2">
@@ -185,14 +187,15 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col">
+                    <div class="col shadow-lg rounded">
                         <div class="wonman-card">
-                            <div class="card">
-                                <div class="w-100 p-2 rounded">
+                            <div class="card border-0">
+                                <div class="w-100 p-2">
                                     <img class="w-100 bg-light rounded" src="./images/jacket-5.png" alt="jacket-1">
                                 </div>
                                 <h1 class="fs-3 ps-2">Man Leather Jackets</h1>
-                                <p class="ps-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe laboriosam a laudantium accusamus
+                                <p class="ps-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe
+                                    laboriosam a laudantium accusamus
                                     nobis repellendus.
                                 </p>
                                 <div class="container mb-2">
@@ -209,14 +212,15 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col">
+                    <div class="col shadow-lg rounded">
                         <div class="wonman-card">
-                            <div class="card">
-                                <div class="w-100 p-2 rounded">
+                            <div class="card border-0">
+                                <div class="w-100 p-2">
                                     <img class="w-100 bg-light rounded" src="./images/jacket-6.png" alt="jacket-1">
                                 </div>
                                 <h1 class="fs-3 ps-2">Man Casual Jackets</h1>
-                                <p class="ps-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe laboriosam a laudantium accusamus
+                                <p class="ps-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe
+                                    laboriosam a laudantium accusamus
                                     nobis repellendus.
                                 </p>
                                 <div class="container mb-2">
@@ -235,18 +239,49 @@
                     </div>
                 </div>
             </div>
-
         </section>
-
-
-
-
-
     </main>
 
     <!-- Footer Section Start -->
-    <footer>
-
+    <!-- col-12 col-sm-6 col-md-12 col-lg-12 -->
+    <footer class="container">
+        <section class="row  gy-5 mt-5">
+            <div class="col footer-left">
+                <!-- <div class="container part-1 rounded-3 shadow p-2 mb-4">
+                    <div class="row d-flex justify-content-around gy-5">
+                        <img class="col " src="./images/house.png" alt="house">
+                        <div class="col">
+                            <h3>Find the Perfect Fit</h3>
+                            <p>Everbody is different. which is why we offer styles for every body.</p>
+                        </div>
+                    </div>
+                </div> -->
+                <div class="part-2 rounded-3 d-flex justify-content-around  shadow p-2 mb-4">
+                    <img class="w-25 p-3" src="./images/house.png" alt="house">
+                    <div class="ms-5 pt-3 me-3">
+                        <h3 class="fw-bold">Find the Perfect Fit</h3>
+                        <p>Everbody is different. which is why we offer styles for every body.</p>
+                    </div>
+                </div>
+                <div class="part-2 rounded-3 d-flex justify-content-around  shadow p-2 mb-4">
+                    <img class="w-25 p-3" src="./images/house.png" alt="house">
+                    <div class="ms-5 pt-3 me-3">
+                        <h3 class="fw-bold">Free Exchanges</h3>
+                        <p>One of the many reasons you can shop with peace of mind.</p>
+                    </div>
+                </div>
+                <div class="part-3 rounded-3 d-flex justify-content-around shadow p-2 mb-4">
+                    <img class="w-25 p-3" src="./images/house.png" alt="house">
+                    <div class="ms-5 pt-3 me-3">
+                        <h3 class="fw-bold">Contact Our Seller</h3>
+                        <p>They are here to help you. That's quite literally what we pay them for.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col footer-right">
+                <img class="w-100 mt-5" src="./images/shopping.png" alt="shopping">
+            </div>
+        </section>
     </footer>
 
     <!-- Bootstrap Bundle JS -->
